# openspecfun

./: .gitignore  CMakeLists.txt  LICENSE.md  Make.inc  Makefile  README.md
Faddeeva/: Faddeeva.cc  Faddeeva.h
amos/: dgamln.f  zairy.f  zasyi.f  zbknu.f  zmlri.f  zs1s2.f  zseri.f  zsqrt.f
debian/: changelog  control  copyright  files  libopenspecfun-base.install  libopenspecfun-dev.install
rem_pio2/: Make.files  cdefs-compat.h  e_rem_pio2.c  e_rem_pio2f.c  fpmath.h  k_rem_pio2.c  math_private.h  types-compat.h
